--- a/app/views/balancesheet.html
+++ b/app/views/balancesheet.html
@@ -1,4 +1,4 @@
-<div class="container table_container table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInBalanceSheet':!isSearched}">
+<div class="container table_container balancesheetheader table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInBalanceSheet':!isSearched}">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
             <ul ng-repeat="rootgroup in rgroupelements" class="list-styles no-padding-hr">
