--- a/app/views/m.user.html
+++ b/app/views/m.user.html
@@ -22,3 +22,6 @@
     <img class="spinner " src="images/ajax-loader.gif " width="60" height="60 ">
     <h4 class="loading_msg ">Loading Please Wait...</h4>
 </div>
+<div class="alert alert-position-success" id="success-alert" style="display:none;">
+    <strong>{{msg}}</strong>
+</div>
