--- a/app/views/header.html
+++ b/app/views/header.html
@@ -177,7 +177,7 @@
                 <div style="width:70%;margin:0 auto; ">
                     <label ng-show="!voucherControl " class="dateshow "><span ng-if="pandlreport==true "><span class="colors actionsmenu " ng-click="datemodelshow() ">{{startdate| date : 'dd-MM-yyyy'}}</span> to <span class="colors actionsmenu
                                     " ng-click="datemodelshow() ">{{today| date : 'dd-MM-yyyy'}}</span></span><span ng-if="pandlreport==false "> as on <span ng-click="datemodelshow() " class="colors actionsmenu ">{{today| date : 'dd-MM-yyyy'}}</span></span></label>
-                    <label ng-show="voucherControl " class="dateshow "><span><span class="colors actionsmenu " ng-click="datemodelforfromandtodate() ">{{startdate| date : 'dd-MM-yyyy'}}</span> to <span class="colors actionsmenu " ng-click="datemodelforfromandtodate() ">{{today| date : 'dd-MM-yyyy'}}</span></span></label>
+                    <label ng-show="voucherControl " class="dateshow "><span><span class="colors actionsmenu " ng-click="datemodelforfromandtodate() ">{{fromdate| date : 'dd-MM-yyyy'}}</span> to <span class="colors actionsmenu " ng-click="datemodelforfromandtodate() ">{{today| date : 'dd-MM-yyyy'}}</span></span></label>
                     <button type="button " style="margin-top: -10px; " class="btn btn-md pull-right globalsearch " ng-click="ledgersearch() "><span class="glyphicon glyphicon-search "></span></button>
                 </div>
             </div>
