--- a/app/views/company.html
+++ b/app/views/company.html
@@ -28,7 +28,7 @@
                             <label class="text-success " ng-if="user.status=='A' ">Active</label>
                             <label class="text-danger " ng-if="user.status=='I' ">Inactive</label>
                             <label class="text-danger " ng-if="user.status=='N' ">Not Created</label></td> -->
-                        <td class="accType vertical-center actions ">
+                        <td class="accType vertical-center actions actions-width">
                             <div class="dropdown">
                                 <a style="text-decoration: none; cursor:pointer; " class="tbl-link dropdown-toggle colors " id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ng-class="{ 'noevnts-actions':
                 permissions(user)} ">Actions<span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span></a>
