--- a/app/views/location.html
+++ b/app/views/location.html
@@ -195,7 +195,7 @@
                         </td>
                         <td class="vertical-center" title=" 'Phone' " filter="{ mobile: 'text'} " sortable=" 'mobile' ">
                             {{user.mobile}}</td>
-                        <td class="accType vertical-center" style="text-align:right;">
+                        <td class="accType vertical-center actions-width" style="text-align:right;">
                             <div class="dropdown">
                                 <a style="text-decoration: none; cursor:pointer;" class="tbl-link dropdown-toggle colors" id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Actions<span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span></a>
                                 <ul class="dropdown-menu actions-view" aria-labelledby="dropdownMenuhideshow">
