--- a/app/views/user.html
+++ b/app/views/user.html
@@ -26,7 +26,7 @@
                             </ul>
                             <p ng-show="user.roles.length > 3">{{user.roles[2].display_name}}.....{{user.roles.length-3}} more</p>
                         </td>
-                        <td class="accType vertical-center" style="text-align:right;">
+                        <td class="accType vertical-center actions-width" style="text-align:right;">
                             <div class="dropdown">
                                 <a style="text-decoration: none; cursor:pointer;" class="tbl-link dropdown-toggle colors" id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Actions<span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span></a>
                                 <ul class="dropdown-menu actions-view" aria-labelledby="dropdownMenuhideshow">
