--- a/app/views/vouchersettings.html
+++ b/app/views/vouchersettings.html
@@ -29,7 +29,7 @@
                         <a class="tbl-link main-field-block"><span>Start: {{user.start_no}}</span><span ng-show="user.print_voucher">,Print</span></a>
                         <span class="subfield-text"><span ng-show="user.allow_manual_id">Manual</span><span ng-show="user.renumber">,Re-Number</span></span>
                     </td>
-                    <td class="accType vertical-center" style="text-align:right;">
+                    <td class="accType vertical-center actions-width" style="text-align:right;">
                         <div class="dropdown">
                             <a style="text-decoration: none; cursor:pointer;" class="tbl-link dropdown-toggle colors" id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ng-class="{'noevnts-actions': permissions()}">Actions
                       <span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span>
