--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -15,7 +15,7 @@
                     <td class="vertical-center" title="'Users'" filter="{ users: 'users_count'}" sortable="'users_count'">
                         {{user.users_count}}
                     </td>
-                    <td class="accType vertical-center" style="text-align:right;">
+                    <td class="accType vertical-center actions-width" style="text-align:right;">
                         <div class="dropdown">
                             <a style="text-decoration: none; cursor:pointer;" class="tbl-link dropdown-toggle colors" id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ng-class="{'noevnts-actions': permissions()}">Actions<span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span></a>
                             <ul class="dropdown-menu actions-view" aria-labelledby="dropdownMenuhideshow">
