--- a/app/views/company.html
+++ b/app/views/company.html
@@ -7,37 +7,33 @@
         <div class="row">
             <div class="col-md-12">
                 <table ng-table=" multiclient" class="table table-bordered client-table " show-filter="searchEnable">
-                    <tr ng-repeat="user in $data " ng-class="{ 'disablerow': user.status==='N' } ">
+                    <tr ng-repeat="user in $data" >
                         <td class="accType " title=" 'Company Name' " filter="{name: 'text'}" sortable=" 'tenant_name' " class="sort-indicator ">
                             <div class="row ">
-                                <div class="col-md-11 ">
-                                    <a class="tbl-link main-field " ng-click="access(user) ">{{user.tenant_name}}<span ng-show="user.status=='I' " class="inactiveshow ">(Inactive)</span></a>
-                                    <span class="subfield-text ">{{user.email}}  {{user.mobile}}</span>
+                                <div class="col-md-11">
+                                    <a ng-hide="user.status==='N'" class="tbl-link main-field" ng-click="access(user)" >{{user.tenant_name}}<span ng-show="user.status=='I' " class="inactiveshow">(Inactive)</span></a>
+                                    <a ng-show="user.status==='N'" class="tbl-link disablerow">{{user.tenant_name}}<span ng-show="user.status=='I' " class="inactiveshow">(Inactive)</span></a>
+                                    <span class="subfield-text">{{user.email}}  {{user.mobile}}</span>
                                 </div>
                             </div>
                         </td>
-                        <td class="accType vertical-center colors pointer-cur " ng-click="access(user) " title=" 'Locations' " filter="{locations: 'number'} " sortable=" 'locations' ">
-                            {{user.locations}}</td>
+                        <td class="accType vertical-center " title=" 'Locations' " filter="{locations: 'number'} " sortable=" 'locations' ">
+                            <span ng-hide="user.status==='N'" ng-click="access(user) " class="colors pointer-cur">{{user.locations}}</span>
+                            <span ng-show="user.status==='N'" class="disable-color">{{user.locations}}</span>
+                          </td>
                         <td class="accType vertical-center " title=" 'Package' " filter="{ package_name: 'text'} " sortable=" 'package_name' ">
                             {{user.package_name}}</td>
-                        <!-- <td class="accType " title=" 'E-mail' " filter="{ email: 'text'} " sortable=" 'email' ">
-                            {{user.email}}</td>
-                        <td class="accType " title=" 'Phone' " filter="{ phone_number: 'text'} " sortable=" 'phone_number' ">
-                            {{user.mobile}}</td> -->
-                        <!-- <td class="accType " title=" 'Status' " filter="{ status: 'text'} " sortable=" 'status' ">
-                            <label class="text-success " ng-if="user.status=='A' ">Active</label>
-                            <label class="text-danger " ng-if="user.status=='I' ">Inactive</label>
-                            <label class="text-danger " ng-if="user.status=='N' ">Not Created</label></td> -->
                         <td class="accType vertical-center actions actions-width">
                             <div class="dropdown">
                                 <a style="text-decoration: none; cursor:pointer; " class="tbl-link dropdown-toggle colors " id="dropdownMenuhideshow" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" ng-class="{ 'noevnts-actions':
                 permissions(user)} ">Actions<span class="glyphicon glyphicon-chevron-down down-up-arrows" aria-hidden="true"></span></a>
                                 <ul class="dropdown-menu actions-view " aria-labelledby="dropdownMenuhideshow ">
-                                    <li class="actionsmenu "><a data-toggle="modal" data-target="#edit_client " ng-click="editClient(user) ">Edit</a> </li>
-                                    <li class="actionsmenu "><a ng-click="backup(user)">Backup</a></li>
-                                    <li class="actionsmenu "><a ng-click="smssettingsclick(user)">SMS Settings</a></li>
-                                    <li class="actionsmenu "><a ng-click="upgradeClick(user, $index)">Upgrade</a></li>
-                                    <li class="actionsmenu "><a ng-click="historyDetails(user, $index)">History</a></li>
+                                    <li ng-show="user.status==='N'" class="actionsmenu "><a ng-click="deleteclient(user.id)">Discard</a></li>
+                                    <li ng-hide="user.status==='N'"class="actionsmenu "><a data-toggle="modal" data-target="#edit_client " ng-click="editClient(user)">Edit</a> </li>
+                                    <li ng-hide="user.status==='N'"class="actionsmenu "><a ng-click="backup(user)">Backup</a></li>
+                                    <li ng-hide="user.status==='N'"class="actionsmenu "><a ng-click="smssettingsclick(user)">SMS Settings</a></li>
+                                    <li ng-hide="user.status==='N'"class="actionsmenu "><a ng-click="upgradeClick(user, $index)">Upgrade</a></li>
+                                    <li ng-hide="user.status==='N'"class="actionsmenu "><a ng-click="historyDetails(user, $index)">History</a></li>
                                 </ul>
                             </div>
                             <div class="row restoreshow " ng-show="pricing_index===$index " outside-click="hideSideMenu($index) ">
@@ -263,7 +259,7 @@
     <div class="modal-dialog ">
         <div class="modal-content mdl-margin ">
             <div class="modal-header no-padding-vr-bottom ">
-                <button type="button " class="close " data-dismiss="modal " ng-click="cancelForm() ">&times;</button>
+                <button type="button " class="close " data-dismiss="modal" ng-click="cancelForm()">&times;</button>
                 <h1 class="modal-title ">Sms Settings</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom ">
@@ -286,8 +282,8 @@
                 <div class="row no-margin-hr ">
                     <div class="col-md-5 pull-right no-padding-hr ">
                         <!-- <button type="button" class="btn background-defalt save-cancel-button" ng-click="historyDetails()" data-dismiss="modal">History</button> -->
-                        <button type="button" class="btn background-defalt save-cancel-button " data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn background-defalt save-cancel-button tabicon " ng-click="saveSmsSettingtoSever()">Save</button>
+                        <button type="button" class="btn background-defalt save-cancel-button" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn background-defalt save-cancel-button tabicon" ng-click="saveSmsSettingtoSever()">Save</button>
                     </div>
                 </div>
             </div>
