adding changes in login

--- a/app/views/resetpassword.html
+++ b/app/views/resetpassword.html
@@ -9,10 +9,10 @@
                 <div ng-show="showerror" class="col-md-12 no-padding-hr">
                     <span style="color:#EF5F5F">{{errormessage}}</span>
                 </div>
-                <form name="ressetpasswordFrom" role="form" ng-submit="ressetpasswordFrom.$valid && false" novalidate class="login_container">
+                <form name="ressetpasswordFrom" role="form" ng-submit="ressetpasswordFrom.$valid && false"  class="login_container">
                     <div class="row form-group">
                         <div class="col-md-12">
-                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" ng-model="user.otp" mobile-validation minlength="6" maxlength="6" required="required">
+                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" ng-model="user.otp" mobile-validation maxlength="6" required="required">
                         </div>
                     </div>
                     <div class="row" ng-show="ressetpasswordFrom.otp.$dirty && ressetpasswordFrom.otp.$error">
@@ -52,7 +52,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <button type="submit" class="btn login-button background-defalt" ng-click="resetpasswords()">Reset password</button>
+                            <button type="submit" class="btn login-button background-defalt" ng-disabled="ressetpasswordFrom.otp.$invalid || ressetpasswordFrom.password.$invalid || ressetpasswordFrom.confirmpassword.$invalid" ng-click="resetpasswords()">Reset password</button>
                         </div>
                     </div>
                 </form>
