--- a/app/views/login.html
+++ b/app/views/login.html
@@ -12,7 +12,7 @@
                 <form name="loginForm" role="form" ng-submit="loginForm.$valid && false" novalidate class="login_container">
                     <div class="row form-group">
                         <div class="col-md-12 col-xs-12 col-sm-12">
-                            <input type="text" class="form-control" name="mobile" placeholder="Enter Mobile Number" autofocus ng-model="user.mobile" required="required" ng-change="editingfields()" minlength="10" maxlength="10" ng-blur="validationsonblur(user.mobile)" mobile-validation>
+                            <input type="text" class="form-control" name="mobile" placeholder="Enter Mobile Number" autofocus ng-model="user.mobile" required="required" ng-change="editingfields()"  maxlength="10" ng-blur="validationsonblur(user.mobile)" mobile-validation>
                         </div>
                     </div>
                     <div ng-show="mobilenumbererror" class="col-md-12 no-padding-hr form-group">
