--- a/app/views/header.html
+++ b/app/views/header.html
@@ -57,6 +57,9 @@
                             <li ng-show="backuptab" ui-sref="backup" ng-class="{'active': activeTab == 8}">
                                 <a class="normaltabs" data-toggle="tab">Backups</a>
                             </li>
+                            <li ng-show="downloadstab" ui-sref="download" ng-class="{'active': activeTab == 11}">
+                                <a class="normaltabs" data-toggle="tab">Downloads</a>
+                            </li>
                             <li ng-show="rolestab" ui-sref="roles" ng-class="{'active': activeTab == 9}">
                                 <a class="normaltabs" data-toggle="tab">Roles</a>
                             </li>
